# Image-Watermarking

./: CMakeLists.txt  README.md  README.txt  cmake_install.cmake
watermark/: BlockingQueue.cpp  main.cpp  stuff.cpp
